--- a/style.css
+++ b/style.css
@@ -535,3 +535,13 @@ body {
   display: flex;
   margin-top: 70px;
 }
+.footer-copyright {
+  color: rgba(255, 255, 255, 0.9);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0;
+  padding-top: 25px;
+}
