--- a/style.css
+++ b/style.css
@@ -534,6 +534,20 @@ body {
 .footer-flex-container {
   display: flex;
   margin-top: 70px;
+  margin-left: 108px;
+}
+.foter-text-logo {
+  color: rgba(255, 255, 255, 0.9);
+  font-family: Poppins;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+}
+.g {
+  display: flex;
+  gap: 12px;
 }
 .footer-copyright {
   color: rgba(255, 255, 255, 0.9);
@@ -544,4 +558,103 @@ body {
   line-height: normal;
   margin: 0;
   padding-top: 25px;
+}
+.copyright-text {
+  width: 260px;
+  color: rgba(255, 255, 255, 0.55);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px;
+}
+.footer-contact {
+  margin-left: 156px;
+}
+.contact-title {
+  margin: 0;
+  color: rgba(255, 255, 255, 0.9);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.content-list {
+  margin: 0;
+  padding-left: 0;
+  list-style-type: none;
+  padding-top: 20px;
+}
+.content-list-item {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.55);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.content-list li {
+  padding-bottom: 10px;
+}
+.footer-categories {
+  margin-left: 115px;
+}
+.categories-title {
+  margin: 0;
+  color: rgba(255, 255, 255, 0.9);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.categories-list {
+  margin: 0;
+  padding-left: 0;
+  list-style-type: none;
+  padding-top: 20px;
+}
+.categories-list li {
+  padding-bottom: 10px;
+}
+.categories-list-item {
+  color: rgba(255, 255, 255, 0.55);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-decoration: none;
+}
+.footer-company {
+  margin-left: 118px;
+}
+.company-title {
+  margin: 0;
+  color: rgba(255, 255, 255, 0.9);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.company-list {
+  margin: 0;
+  padding-left: 0;
+  list-style-type: none;
+  padding-top: 20px;
+}
+.company-list-item {
+  color: rgba(255, 255, 255, 0.55);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-decoration: none;
+}
+.company-list li {
+  padding-bottom: 10px;
 }
