--- a/style.css
+++ b/style.css
@@ -1,18 +1,28 @@
 body {
   background: #1e252b;
-  width: 1440px;
-  height: 5252px;
-  overflow-x: hidden;
+  /*
+  overflow-x: hidden;*/
+}
+.container {
+  max-width: 1224px;
+  margin: 0 auto;
+  display: flex;
 }
 .header {
   display: flex;
   padding-left: 117px;
 }
-.header-logo {
-  padding-top: 38px;
+.group-header-png {
+  height: 21px;
+  width: 20px;
+  padding-top: 6px;
 }
 .header-logo-link {
+  padding-top: 38px;
   text-decoration: none;
+  display: flex;
+}
+.header-logo-link-text {
   color: rgba(255, 255, 255, 0.9);
   font-family: Poppins;
   font-size: 22px;
@@ -50,15 +60,12 @@ body {
 .header-svg {
   padding-top: 5px;
 }
-
-.button-entrance {
-  padding-left: 193px;
-}
 .button-row {
   display: flex;
   list-style-type: none;
   margin: 0;
   padding-top: 28px;
+  padding-left: 193px;
 }
 .header-button-login {
   color: rgba(255, 255, 255, 0.78);
@@ -85,13 +92,14 @@ body {
   line-height: normal;
   border: 0;
 }
-.awesome-tools {
+.container-awesome-tools {
+  max-width: 1224;
+  margin: 0 auto;
   background-image: url(./src/images/background1.png);
   background-repeat: no-repeat;
   background-position: right;
   padding-top: 111px;
   padding-left: 111px;
-  width: 1440px;
 }
 .awesome-tools-title {
   width: 600px;
@@ -157,6 +165,10 @@ body {
   gap: 30px;
   padding-left: 12px;
   margin-bottom: 12px;
+}
+.container-sectoin-hero {
+  max-width: 1224;
+  margin: 0 auto;
 }
 .tools-link-h2 {
   width: 455px;
@@ -301,12 +313,9 @@ body {
   line-height: normal;
   margin-left: 628px;
 }
-.brand-section {
-  margin-top: 200px;
-  margin-bottom: 200px;
-  margin-left: 108px;
-}
 .brand-container {
+  max-width: 1224;
+  margin: 0 auto;
   width: 1224px;
   height: 253px;
   flex-shrink: 0;
@@ -314,6 +323,9 @@ body {
   border: 2px solid rgba(255, 255, 255, 0.05);
   background: rgba(44, 53, 61, 0.2);
   backdrop-filter: blur(25px);
+  margin-top: 200px;
+  margin-bottom: 200px;
+  margin-left: 108px;
 }
 .brand-title {
   color: rgba(255, 255, 255, 0.8);
@@ -334,6 +346,8 @@ body {
   grid-gap: 107px;
 }
 .newcomer-flex-container {
+  max-width: 1224;
+  margin: 0 auto;
   display: flex;
   margin-left: 108px;
 }
@@ -370,6 +384,7 @@ body {
   font-weight: 500;
   line-height: normal;
   margin-top: 60px;
+  border: 0;
 }
 .newcomer-programs-container {
   padding-left: 223px;
@@ -469,6 +484,105 @@ body {
   font-weight: 600;
   line-height: normal;
 }
+.ronald-container {
+  max-width: 1224;
+  margin: 0 auto;
+  display: flex;
+  padding-top: 200px;
+}
+.chevron-grey {
+  height: 48px;
+  width: 48px;
+  margin-left: 124px;
+  padding-top: 222px;
+}
+.chevron-orange {
+  height: 48px;
+  width: 48px;
+  padding-left: 125px;
+  padding-top: 222px;
+}
+.ronald {
+  width: 399px;
+  height: 600px;
+  background-image: url("./src/images/david.png");
+  background-repeat: no-repeat;
+  margin-left: 123px;
+}
+.ronald-richards-profession {
+  width: 265px;
+  height: 91px;
+  border-radius: 8px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(40, 48, 54, 0.2);
+  backdrop-filter: blur(25px);
+  margin-top: 370px;
+  margin-left: 145px;
+}
+.ronald-richards-name {
+  margin: 0;
+  color: rgba(255, 253, 253, 0.78);
+  font-family: Poppins;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.39px;
+  padding-top: 10px;
+  padding-left: 23px;
+}
+.ronald-richards-text {
+  margin: 0;
+  color: rgba(255, 253, 253, 0.55);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 23px;
+}
+.ronald-description {
+  color: rgba(255, 255, 255, 0.78);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.21px;
+  width: 393px;
+  margin: 0;
+  padding-top: 128px;
+  padding-left: 100px;
+  position: relative;
+  z-index: 0;
+}
+.animation-row {
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+}
+.animation-row-black {
+  height: 8px;
+  width: 52px;
+  background: #283036;
+  border-radius: 10px;
+}
+.animation-row-orange {
+  height: 8px;
+  width: 52px;
+  background: #ff6e30;
+  border-radius: 10px;
+}
+.backgrond-text {
+  position: absolute;
+  z-index: 0;
+  margin-top: 75px;
+  margin-left: 50px;
+}
+.contributor-container {
+  max-width: 1224;
+  margin: 0 auto;
+}
 .contributor-title {
   width: 553px;
   margin: 0;
@@ -535,7 +649,11 @@ body {
   height: 351px;
 }
 .footer-flex-container {
+  max-width: 1224;
+  margin: 0 auto;
   display: flex;
+}
+.footer-flex-element {
   margin-top: 70px;
   margin-left: 108px;
 }
@@ -572,6 +690,7 @@ body {
   line-height: 25px;
 }
 .footer-contact {
+  margin-top: 70px;
   margin-left: 156px;
 }
 .contact-title {
@@ -583,13 +702,13 @@ body {
   font-weight: 500;
   line-height: normal;
 }
-.content-list {
+.contact-list {
   margin: 0;
   padding-left: 0;
   list-style-type: none;
   padding-top: 20px;
 }
-.content-list-item {
+.contact-list-item {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.55);
   font-family: Poppins;
@@ -598,10 +717,11 @@ body {
   font-weight: 500;
   line-height: normal;
 }
-.content-list li {
+.contact-list li {
   padding-bottom: 10px;
 }
 .footer-categories {
+  margin-top: 70px;
   margin-left: 115px;
 }
 .categories-title {
@@ -632,6 +752,7 @@ body {
   text-decoration: none;
 }
 .footer-company {
+  margin-top: 70px;
   margin-left: 118px;
 }
 .company-title {
